syntax = "proto3";
package ocp.verdict.api;

option go_package = "github.com/ozoncp/ocp-solution-api/pkg/ocp-verdict-api;ocp_verdict_api";

message Verdict {
  uint64 solutionId = 1;
  uint64 userId = 2;

  enum Status {
    InProgress = 0;
    Passed = 1;
    Failed = 2;
    SyntaxError = 3;
    CompilationError = 4;
    Dropped = 5;
  }

  Status status = 3;
  int64 timestamp = 4;
  string comment = 5;
}
